assets/css/style.css
body {
    margin: 0;
   
}
html, h3 {
    font-family: 'lato';
    color: #242424;
}

p {
    color: #383838;
    font-size: 1.1em;
}

.text-white {
    color: #ffffff;
}

.bg-mask {
   background-image: url(../imgs/mask.png);
   height: 100%;
}

.bg {
    background-image: url("../imgs/animation/img1.jpg");
    background-repeat: no-repeat;
    width: 100%;
    height: 100vh;
    background-position: center;
    background-size: cover;
    background-color: #272b2c;
    animation-name: animation;
    animation-duration: 20s;
    animation-iteration-count: infinite;
    animation-delay: 5s;
}

@keyframes animation {
    0%   { background-image: url("../imgs/animation/img1.jpg");}
    15%  { background-image: url("../imgs/animation/img2.jpg");}
    35%  { background-image: url("../imgs/animation/img3.jpg");}
    50%  { background-image: url("../imgs/animation/img4.jpg");}
    70%  { background-image: url("../imgs/animation/img5.jpg");}
    85%  { background-image: url("../imgs/animation/img6.jpg");}
    100% { background-image: url("../imgs/animation/img7.jpg");}

}

.nav section {
    display: inline-block;
    margin-left: 2em;
    font-size: 13px;
}

.nav section a{
    background: #383838;
    display: none;
    position: absolute;
    right: 1em;
    top: 1em;
}

.nav section ul {
    cursor: pointer;
    list-style: none;
    display: inline-block;
    margin-bottom: 0em;
}

.nav section ul li {
    justify-content: center;
}

.my-hover li:hover {
    display: flex;
    align-items: flex-end;
    width: 120%;
    height: 2px;
    line-height: 2em;
    border-radius: 20px;
    background-color: #67AD44; 
}

.nav-image img{
    max-width: 13em;
    margin: 2.5em 7em 0em 4em;
}

.my-button {
    font-size: 14px;
    text-align: center;
    margin: 5px;
}

.my-button-colorless {
    background-color: rgba(0, 0, 0, 0);
    border: 2px solid #68ad43;
}

.my-button-colorless:hover {
    background-color: #68ad43;
    color: #ffffff;
}

.nav-button {
    width: 8em; 
    padding: 0.7em 0.5em;  
}

.my-button-green {
    border: 2px solid #68ad43;
    background-color: #68ad43;
    color: #ffffff;
}

.my-button-green:hover {
    background-color: #ffffff;
    color: #000000;
}

.button-info {
    width: 18em;
    padding: 1.7em 0.2em;
    cursor: pointer;
}

.button-more {
    width: 10em;
    padding: 1.7em 0.2em;
    cursor: pointer;
}

.my-flex {
    display: flex;
}

.my-justify-content-start {
    justify-content: flex-start;
}

.my-justify-content-between {
    justify-content: space-between;
}

.my-justify-content-end {
    justify-content: flex-end;
}

.my-align-items-start {
    align-items: flex-start;
}

.my-align-items-center {
    align-items: center;
}

.my-align-items-end {
    align-items: flex-end;
}

.my-flex-column {
    flex-direction: column;
}

.my-width-100 {
    width: 100%;
}

.principal {
    margin-top: 7em;
    margin-bottom: 1em;
}

.slogan {
    width: 70%;
    margin-top: 1em;
}

.slogan h3 {
    text-align: center;
    text-transform: uppercase;
    font-size: 38px;
    line-height: 55px;
    letter-spacing: 1px;
    font-weight: 600;
}

.buttons {
    margin-top: 2em;
    text-align: center;
}

.slogan-trader {
    margin-top: 2em;
}

.info {
    width: 52%;
    margin-top: 1em;
}

.info h4 {
    text-align: center;
    text-transform: uppercase;
    font-size: 1.9em;
    line-height: 1.5em;
    letter-spacing: 0.1em;
    font-weight: 400;
}

.display-col {
    margin: 1em 6em;
    flex-wrap: wrap;
}

.text-col {
   margin: 1.5em 1.5em;
   padding: 1em;
   line-height: 25px;
   text-align: justify;
   max-width: 300px;
}

.text-col h4 {
    font-size: 1.3em;
    margin-bottom: 2em;
}


.my-h4:after {
    content: ' ';
    display: flex;
    width: 30%;
    height: 2px;
    margin-top: 10px;
    border-radius: 20px;
    background-color: #67AD44;
}

.half-green img {
    width: 100%;
    margin-top: 1em;
}

.clients {
    text-align: center;
}

@media only screen and (min-width: 800px) and (max-width: 920px){
    .nav section ul {
        display: none;
    }

    .nav section a{
        background: #383838;
        display: block;
        position: absolute;
        right: 1em;
        top: 1em;
    }

    .icon i:hover {
        background: #383838;
        color: #68ad43;
    }

    .principal {
        margin-top: 5em;
        margin-bottom: 1em;
    }

    .buttons {
        margin-top: 2em;
    }

    .slogan h3 {
        margin-bottom: 1em;
        font-size: 1.4em;
        line-height: 1.3em;
    }

    .info h4 {
        margin-top: 0em;
        margin-bottom: 0em;
        font-size: 1.3em;
        line-height: 1em;
    }


    .display-col {
        margin: 1em 0em;
    }

    .bg {
        height: 70vh;
    }
}

@media only screen and (min-width: 751px) and (max-width: 799px){
    .nav section ul {
        display: none;
    }

    .nav section a{
        background: #383838;
        display: block;
        position: absolute;
        right: 1em;
        top: 1em;
    }
    
    .nav-image img{
        max-width: 13em;
        margin: 1em;
    }

    .principal {
        margin-top: 5em;
        margin-bottom: 1em;
    }

    .buttons {
        margin-top: 2em;
    }

    .slogan h3 {
        margin-bottom: 1em;
        font-size: 1.4em;
        line-height: 1.3em;
    }

    .info h4 {
        margin-top: 0em;
        margin-bottom: 0em;
        font-size: 1.3em;
        line-height: 1em;
    }


    .display-col {
        margin: 1em 0em;
    }

    .bg {
        height: 75vh;
    }

}

@media only screen and (min-width: 621px) and (max-width: 750px){
    .nav section ul {
        display: none;
    }

    .nav section a{
        background: #383838;
        display: block;
        position: absolute;
        right: 1em;
        top: 1em;
    }

    .nav-image img{
        max-width: 13em;
        margin: 1em;
    }

    .principal {
        margin-top: 1em;
        margin-bottom: 1em;
    }

    .buttons {
        margin-top: 1em;
    }

    .slogan h3 {
        margin-bottom: 1em;
        font-size: 1.4em;
        line-height: 1.3em;
    }

    .info h4 {
        margin-top: 5em;
        margin-bottom: 0em;
        font-size: 1.3em;
        line-height: 1em;
    }


    .display-col {
        margin: 1em 10em;
    }

}

@media only screen and (min-width: 581px) and (max-width: 620px){
    .nav section ul {
        display: none;
    }

    .nav section a{
        background: #383838;
        display: block;
        position: absolute;
        right: 1em;
        top: 1em;
    }

    .nav-image img{
        max-width: 13em;
        margin: 1em;
    }

    .principal {
        margin-top: 4em;
        margin-bottom: 1em;
    }

    .buttons {
        margin-top: 2em;
    }

    .slogan h3 {
        margin-bottom: 0em;
        font-size: 1.7em;
        line-height: 1.5em;
    }

    .info h4 {
        margin-top: 0em;
        margin-bottom: 0em;
        font-size: 1.3em;
        line-height: 1em;
    }


    .display-col {
        margin: 1em 1em;
    }

}

@media only screen and (max-width: 580px) {
    .nav section ul {
        display: none;
    }

    .nav section a{
        background: #383838;
        display: block;
        position: absolute;
        right: 1em;
        top: 1em;
    }

    .nav-image img{
        max-width: 13em;
        margin: 1em;
    }

    .principal {
        margin-top: 0;
    }
}

@media only screen and (min-width: 415px) and (max-width: 580px){
    .nav section ul {
        display: none;
    }

    .nav section a{
        background: #383838;
        display: block;
        position: absolute;
        right: 1em;
        top: 1em;
    }

    .nav-image img{
        max-width: 13em;
        margin: 1em;
    }

    .buttons {
        margin-top: 2em;
    }

    .slogan h3 {
        margin-bottom: 0em;
        font-size: 1.7em;
        line-height: 1.5em;
    }

    .info h4 {
        margin-top: 0em;
        margin-bottom: 0em;
        font-size: 1.3em;
        line-height: 1em;
    }


    .display-col {
        margin: 1em 1em;
    }

}

@media only screen and (min-width: 377px) and (max-width: 414px){
    .nav section ul {
        display: none;
    }

    .nav section a{
        background: #383838;
        display: block;
        position: absolute;
        right: 1em;
        top: 1em;
    }

    .nav-image img{
        max-width: 13em;
        margin: 1em;
    }

    .buttons {
        margin-top: 1em;
    }

    .slogan h3 {
        margin-bottom: 1em;
        font-size: 1.7em;
        line-height: 1.4em;
    }

    .info h4 {
        margin-top: 0.5em;
        margin-bottom: 0em;
        font-size: 1.3em;
        line-height: 1em;
    }


    .display-col {
        margin: 1em 2em;
    }
}


@media only screen and (min-width: 272px) and (max-width: 376px){    
   .nav section ul {
        display: none;
    }

    .nav section a{
        background: #383838;
        display: block;
        position: absolute;
        right: 1em;
        top: 1em;
    }

    .nav-image img{
        max-width: 13em;
        margin: 1em;
    }

    .buttons {
        margin-top: 0.5em;
    }

    .slogan h3 {
        margin-bottom: 0.5em;
        font-size: 1.5em;
        line-height: 1.3em;
    }

    .info h4 {
        margin-top: 2.5em;
        margin-bottom: 0em;
        font-size: 1.3em;
        line-height: 1em;
    }


    .display-col {
        margin: 1em 2em;
    }
}

@media only screen and (max-width: 320px){
    .nav section ul {
        display: none;
    }

    .nav section a{
        background: #383838;
        display: block;
        position: absolute;
        right: 1em;
        top: 1em;
    }

    .nav-image img{
        max-width: 13em;
        margin: 1em;
    }
    
    .buttons {
        margin-top: 0.5em;
    }

    .slogan h3 {
        margin-bottom: 0em;
        font-size: 1.3em;
        line-height: 1.2em;
    }

    .info h4 {
        margin-top: 2em;
        margin-bottom: 0em;
        font-size: 1.3em;
        line-height: 1em;
    }


    .display-col {
        margin: 1em 2em;
    }
}


@media only screen and (min-width: 0) and (max-width: 272) {
    .nav section ul {
        display: none;
    }

    .nav section a{
        background: #383838;
        display: block;
        position: absolute;
        right: 1em;
        top: 1em;
    }

    .nav-image img{
        max-width: 13em;
        margin: 1em;
    }

    .slogan {
        margin-top: 2em;
        margin-left: 2em;
    }

    .slogan-trader {
        margin-top: 0em;
    }

    .slogan h3 {
        margin-top: 0em;
        margin-bottom:0em;
        font-size: 1.5em;
        line-height: 1em;
    }

    .buttons {
        margin-top: 1.5em;
        margin-bottom: 0em;
    }

    .info {
        margin-top: 1em;
    }

    .button-info {
        width: 12em;
        padding: 1.2em 0.1em;
    }

    .button-more {
        width: 8em;
        padding: 1.2em 0.1em;
    }

    .info h4 {
        margin-top: 1em;
        margin-bottom: 0em;
        font-size: 1em;
        line-height: 1em;
    }

}

